fixed spacing

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -124,7 +124,7 @@
       margin-left: 100px;
   }
   .cert-container {
-      justify-content: center;
+      justify-content: left;
   }
 }
 
